# 8dot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: demo.c
include/: atedot.h  common.h  repl.h
src/: atedot.c  main.c  repl.c
src/types/: csv.c  line.c  lines.c  ticks.c
tests/: exp.csv
